--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
